@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.3 2004/10/10 17:27:43 jdolecek Exp $
+# $NetBSD: Makefile.common,v 1.4 2004/10/10 17:46:07 jdolecek Exp $
 #
 # This Makefile fragment is included by all PostgreSQL packages built from
 # the main sources of the PostgreSQL distribution except jdbc-postgresql.
@@ -33,7 +33,7 @@ PATCHDIR?=		${.CURDIR}/../postgresql73/patches
 # BASE_VERS		pkgsrc-mangled version number (convert pl -> .)
 #
 # Note: Do not forget jdbc-postgresql when updating version
-DIST_VERS?=		7.3.6
+DIST_VERS?=		7.3.7
 BASE_VERS?=		${DIST_VERS}
 
 BUILDLINK_DEPENDS.postgresql73-lib?=	postgresql73-lib>=${BASE_VERS}
